# dotfiles

./: .bashrc  .flake8  .gitignore  Dockerfile  Makefile  README.md  alacritty.toml  leetcode.toml  pyproject.toml  ruff.toml  vimium-options.json
aerospace/: aerospace.toml
conda/: README.md  condarc
fish/: config.fish
fish/completions/: arc.fish
fish/conf.d/: abbreviations.fish
keyboards/: README.md  default_hpd_v2_layout.vil  default_velvet_v3_layout.vil  hpd_v2_miryoku-ish.vil  velvet_layout.vil  velvet_v3_colemak_dh_layout.vil  velvet_v3_layout.vil  velvet_v3_miryoku-ish.vil
nvim/: README.md  init.lua
nvim/after/plugin/: README.md  telescope.lua  treesitter.lua
nvim/lsp/: README.md  clangd.lua  lua_ls.lua  pylsp.lua  ruff.lua  ty.lua
nvim/lua/config/: autocommands.lua  keymap.lua  lazy.lua  lsp.lua  options.lua  remap.lua
nvim/lua/plugins/: .gitignore  README.md  colorschemes.lua  completion.lua  debug.lua  general.lua  git.lua  llm.lua  lsp.lua  repl.lua  telescope.lua  treesitter.lua
nvim/lua/user/: colorscheme.lua  (+7 more)
nvim/plugin/: codecompanion.lua  colorscheme.lua  filetypes.lua  flash.lua  keymaps.lua  lsp.lua  mini.lua  minuet-ai.lua  options.lua  treesitter.lua
nvim/syntax/: Makefile  README.md
opencode/: opencode.json
raycast/: README.md  quicklinks.json  snippets.json
raycast/scripts/: README.md  inference-time-statistics-from-log-url.py  pyproject.toml  search-rides-from-clipboard.py  startrek-tickets-waiting-for-response.py
tmux/: tmux.conf
tridactyl/: tridactylrc
wezterm/: appearance.lua  keymap.lua  ssh.lua  wezterm.lua
