[project]
name = "raycast-script-commands"
version = "0.1.0"
description = "A collection of Python scripts for Raycast script commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "termcolor>=3.3.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
